[package]
name = "serial-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5", optional = true }

[features]
default = []
print-mute = []
defmt-log = ["defmt", "defmt?/encoding-raw"] # encoding-rzcobs | encoding-raw

device-esp32c3 = []
device-hk32f0301mxxc-uart1 = []
device-hk32f0301mxxc-uart2 = []